fix pagination overflow caused by margin with width 100%

--- a/core/assets/css/pagination.css
+++ b/core/assets/css/pagination.css
@@ -2,6 +2,8 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    margin: 6px 0;
+    padding: 0;
 }
 
 .pagination > ul {
